refactor: replace get(0), add(0), and remove(0) with getFirst(), addFirst(), and removeFirst() in RedisListStringTest